--------------------------------------------------------------------------
---------                Ampache -- CHANGELOG                    ---------   
--------------------------------------------------------------------------

--------------------------------------------------------------------------
  v.3.4-Alpha3 
	- Fixed album random and by min random 
	- Added Delete to Playlist and Live Streams (Radio)
	- Massive improvements to CSS (Thx Spocky) 
	- Addition of Greysme theme (Thx Spocky)
	- Based MPD Support Restored
	- Moved catalog stats off to statistics page
	- Added basic sorting to all browse pages
	- Tweaked the Playback to try to fix some issues with WMP
	- Reduced the timeout on the LastFM Plugin to reduce delay
		when scrobbling is down
	- Added Add buttons to single playlist view, and put the delete 
		link back for catalogs
	- Fixed Playlist Play links
	- Added ability to gather album art for a single catalog at a time
	- Improved Upgrade Documentation
	- Disabled more functionality when in Demo Mode because people
		are lame
	- Cleaned up Preferences, moved Plugin Preferences into their own
		section
	- Fixed potential LastFM issue if invalid data is passed
	- Added Abstract class for localplay and started work on 
		next generation of localplay support
	- Moved Catalog functions out of sidebar, back into the content
		area
	- Fixed a problem with batch downloads and tmpplaylists
	- Fixed missing set_timeout_limit(0); on add to catalog
		functions

--------------------------------------------------------------------------
  v.3.4-Alpha2 09/03/2007
	- Fixed a problem where it'd let you go through the install after
		ampache had already been installed due to a change in the
		config variable names
	- Added ability to delete songs from a saved playlist
	- Added ability to create a new playlist based on active playlist
	- Fixed the Playlist Method 'Send on Add' so that it works, the
		'Send and Clear' is still broken
	- Fixed Advanced random