@@ -85,12 +85,9 @@ function update_txt(value,field) {
 	document.getElementById(field).innerHTML=value;
 }
 
-// SubmitToPage this function specificaly submits the form to the specified page
-function SubmitToPage(form_id,action) { 
-
-	document.getElementById(form_id).action = action;
-	document.getElementById(form_id).submit();
-	return true;
+// Reload our util frame
+function reload_util() { 
+	document.getElementById('util_iframe').contentWindow.location.reload(true);
 } 
 
 function popup_art(url) {
