@@ -57,6 +57,10 @@ switch ($_REQUEST['page']) {
 		require_once Config::get('prefix') . '/server/localplay.ajax.php'; 
 		exit; 
 	break;
+	case 'stream': 
+		require_once Config::get('prefix') . '/server/stream.ajax.php';
+		exit; 
+	break;
 	default: 
 		// A taste of compatibility
 	break;
