@@ -184,6 +184,34 @@ h3#content_title span {
   padding:4px;
 }
 #rightbar #rb_action li         {	display:inline; }
+
+#rightbar li#pl_add             { position:relative; z-index:10;}
+#rightbar li#pl_add:hover       { background:#99ccff; } 
+/* Rightbar AddItems SubMenu */
+#rightbar li:hover #pl_action_additems  {       display:block; } 
+#rightbar #pl_action_additems   { 
+  display:none;         
+  position:absolute;
+        right:0px;
+        top:18px;
+        background:#fff;
+        border:2px solid #c0c0c0;
+        width:120px;
+        font-size:0.7em;
+        padding:0.3em;
+}
+* html #rightbar #pl_action_additems {right:100px;} /* IE6 fix */
+
+#rightbar #pl_action_additems a {
+ display:block;
+ padding:0.1em;
+ border-bottom:1px dotted #c0c0c0;
+ color:#5b5b5b;
+ text-decoration:none;
+ text-align:right;
+}
+
+
 #rightbar li#rb_add             { position:relative; z-index:10;}
 #rightbar li#rb_add:hover       { background:#99ccff; } 
 /* Rightbar AddItems SubMenu */
@@ -209,6 +237,8 @@ h3#content_title span {
  text-decoration:none;
  text-align:right;
 }
+
+#rightbar #pl_action_additems a:hover,
 #rightbar #rb_action_additems a:hover,
 #rightbar #rb_current_playlist a:hover { background:#99ccff; color:#fff; }
 
